Bug 745292 - Log non-empty shader/program infoLogs as WebGL (JS) warnings - r=jgilbert